--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B22c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Wwr-sZ-vet">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Wwr-sZ-vet">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
         <!--Search-->
@@ -251,7 +251,7 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WsG-nm-M5K" customClass="KBRoundedButton">
-                                <rect key="frame" x="252" y="387" width="60" height="60"/>
+                                <rect key="frame" x="244" y="379" width="60" height="60"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.51198390334752319" blue="0.69019607843137254" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -283,9 +283,9 @@
                             <constraint firstItem="LcM-Rm-VQk" firstAttribute="top" secondItem="Lms-O3-59V" secondAttribute="top" id="6Kx-1w-gWY"/>
                             <constraint firstItem="LcM-Rm-VQk" firstAttribute="leading" secondItem="Lms-O3-59V" secondAttribute="leading" id="WXf-kD-aUo"/>
                             <constraint firstAttribute="bottom" secondItem="LcM-Rm-VQk" secondAttribute="bottom" id="fFl-AZ-SPK"/>
-                            <constraint firstItem="Npd-sX-d81" firstAttribute="top" secondItem="WsG-nm-M5K" secondAttribute="bottom" constant="8" symbolic="YES" id="ghB-vp-v0g"/>
+                            <constraint firstItem="Npd-sX-d81" firstAttribute="top" secondItem="WsG-nm-M5K" secondAttribute="bottom" constant="16" id="ghB-vp-v0g"/>
                             <constraint firstAttribute="trailing" secondItem="LcM-Rm-VQk" secondAttribute="trailing" id="krU-4h-EdT"/>
-                            <constraint firstAttribute="trailing" secondItem="WsG-nm-M5K" secondAttribute="trailing" constant="8" id="nQh-7I-QJ8"/>
+                            <constraint firstAttribute="trailing" secondItem="WsG-nm-M5K" secondAttribute="trailing" constant="16" id="nQh-7I-QJ8"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Expenses" id="H7q-K3-3GL">
