--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -886,7 +886,7 @@
                             <tableViewSection footerTitle="Allows you to add expense when you open application." id="qTa-8P-aGy" userLabel="StartupViewController">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="Oej-r5-xpT" userLabel="StartupScreen">
-                                        <rect key="frame" x="0.0" y="257" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="255" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Oej-r5-xpT" id="XPk-aP-X1y">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -935,7 +935,7 @@
                             <tableViewSection footerTitle="Open the application using fingerprint." id="Iic-KC-7yR" userLabel="Touch ID">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="7KF-kx-c95" userLabel="StartupScreen">
-                                        <rect key="frame" x="0.0" y="354" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="350" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7KF-kx-c95" id="AIN-Zp-Ctw">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -1630,7 +1630,7 @@
             <objects>
                 <tableViewController id="OhM-zH-INc" customClass="SelectedCategoryTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="sEb-8t-xKX">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
@@ -1789,10 +1789,10 @@
         <image name="Tomato" width="42" height="42"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="eiF-x1-yp8"/>
+        <segue reference="xQY-w0-KW7"/>
         <segue reference="bBY-Me-af6"/>
-        <segue reference="qiW-IC-btw"/>
-        <segue reference="nDW-xd-tmg"/>
+        <segue reference="eiF-x1-yp8"/>
+        <segue reference="rRc-1T-lWX"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.023529411760000001" green="0.47843137250000001" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
