--- a/Depoza/Base.lproj/LaunchScreen.xib
+++ b/Depoza/Base.lproj/LaunchScreen.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -10,25 +11,39 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="lxO-GT-LwH">
-                    <rect key="frame" x="140" y="140" width="200" height="200"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage.png" translatesAutoresizingMaskIntoConstraints="NO" id="JHy-ev-LEQ">
+                    <rect key="frame" x="80" y="0.0" width="320" height="480"/>
+                    <animations/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="200" id="dqI-PJ-Q9Y"/>
-                        <constraint firstAttribute="width" constant="200" id="qwt-hK-J3z"/>
+                        <constraint firstAttribute="height" constant="480" id="FII-OI-CmK"/>
+                        <constraint firstAttribute="width" constant="320" id="hIM-Lj-TO2"/>
                     </constraints>
                 </imageView>
             </subviews>
+            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="lxO-GT-LwH" secondAttribute="centerX" id="F69-XQ-G0b"/>
-                <constraint firstAttribute="centerY" secondItem="lxO-GT-LwH" secondAttribute="centerY" id="vTe-G3-Lm7"/>
+                <constraint firstItem="JHy-ev-LEQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" symbolic="YES" id="7z3-Zr-Tpk"/>
+                <constraint firstAttribute="trailing" secondItem="JHy-ev-LEQ" secondAttribute="trailing" constant="20" symbolic="YES" id="CWG-M7-WLQ"/>
+                <constraint firstItem="JHy-ev-LEQ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="GVu-Uo-GCs"/>
+                <constraint firstAttribute="bottom" secondItem="JHy-ev-LEQ" secondAttribute="bottom" constant="20" symbolic="YES" id="Wjw-4u-wRN"/>
+                <constraint firstItem="JHy-ev-LEQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="gSB-VT-GE8"/>
+                <constraint firstItem="JHy-ev-LEQ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="rj6-DF-4Wt"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="7z3-Zr-Tpk"/>
+                    <exclude reference="CWG-M7-WLQ"/>
+                    <exclude reference="Wjw-4u-wRN"/>
+                    <exclude reference="gSB-VT-GE8"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
     <resources>
-        <image name="LaunchImage.jpg" width="200" height="200"/>
+        <image name="LaunchImage.png" width="320" height="480"/>
     </resources>
 </document>
